// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`the setup plan's shape and copy plan: the machine view is unchanged 1`] = `
{
  "canInstall": false,
  "contract": 1,
  "finishBlockedBy": [
    "skills.writing-style",
  ],
  "groups": [
    {
      "id": "mac",
      "rows": [
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "status",
            ],
          },
          "id": "perm.fda",
          "kind": "permission",
          "recheck": "on-activate",
          "required": true,
          "status": "error",
        },
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "status",
            ],
          },
          "id": "perm.login-items",
          "kind": "permission",
          "recheck": "on-activate",
          "required": false,
          "status": "error",
        },
        {
          "action": null,
          "id": "perm.notifications",
          "kind": "permission",
          "recheck": "on-activate",
          "required": false,
          "status": "skipped",
        },
        {
          "action": null,
          "id": "tool.macos",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "ready",
        },
        {
          "action": null,
          "id": "tool.clt",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "ready",
        },
        {
          "action": null,
          "id": "tool.arch",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "error",
        },
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "apply",
              "--only",
              "path.link",
            ],
          },
          "id": "tool.path",
          "kind": "info",
          "recheck": "on-change",
          "required": false,
          "status": "missing",
        },
      ],
    },
    {
      "id": "accounts",
      "rows": [
        {
          "action": null,
          "id": "account.github",
          "kind": "account",
          "recheck": "on-change",
          "required": false,
          "status": "ready",
        },
      ],
    },
    {
      "id": "access",
      "rows": [],
    },
    {
      "id": "tools",
      "rows": [
        {
          "action": {
            "tool": "herdr",
            "type": "install",
            "via": "brew",
          },
          "id": "tool.herdr",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "invalid",
        },
        {
          "action": null,
          "id": "tool.claude",
          "kind": "tool",
          "recheck": "on-activate",
          "required": true,
          "status": "error",
        },
        {
          "action": {
            "tool": "fast-browser",
            "type": "link-bundled",
          },
          "id": "tool.fast-browser",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "missing",
        },
        {
          "action": null,
          "finishGated": false,
          "id": "tool.fast-browser-extension",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "skipped",
        },
        {
          "action": null,
          "id": "tool.editor",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "ready",
        },
        {
          "action": {
            "type": "open-url",
            "url": "https://www.google.com/chrome/",
          },
          "id": "tool.chrome",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "missing",
        },
        {
          "action": {
            "target": "keyboard",
            "type": "open-settings",
          },
          "id": "tool.mission-control",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "needs-you",
        },
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "apply",
              "--only",
              "proxy.install",
            ],
          },
          "id": "tool.proxy",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "missing",
        },
        {
          "action": {
            "type": "steps",
          },
          "id": "tool.state-backup",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "needs-you",
        },
        {
          "action": null,
          "id": "tool.plugins",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "error",
        },
        {
          "action": null,
          "finishGated": true,
          "id": "skills.writing-style",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "needs-you",
          "waivable": false,
        },
        {
          "action": {
            "fields": [
              {
                "name": "apiKey",
                "secret": true,
              },
            ],
            "integration": "linear",
            "type": "connect",
          },
          "id": "tool.linear-mcp",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "needs-you",
        },
        {
          "action": null,
          "id": "tool.rt",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "ready",
        },
        {
          "action": null,
          "id": "tool.rt-link",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "skipped",
        },
        {
          "action": null,
          "id": "tool.legacy-dirs",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "ready",
        },
        {
          "action": null,
          "id": "tool.intercepts",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "ready",
        },
        {
          "action": null,
          "id": "tool.app",
          "kind": "tool",
          "recheck": "on-activate",
          "required": true,
          "status": "missing",
        },
        {
          "action": null,
          "id": "tool.vsix",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "skipped",
        },
        {
          "action": null,
          "id": "tool.extension",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "skipped",
        },
        {
          "action": null,
          "id": "tool.shell",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "needs-you",
        },
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "apply",
              "--only",
              "services.register",
            ],
          },
          "id": "tool.daemon",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "missing",
        },
        {
          "action": null,
          "id": "tool.flavor",
          "kind": "tool",
          "recheck": "on-activate",
          "required": true,
          "status": "ready",
        },
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "apply",
              "--only",
              "home.init",
            ],
          },
          "id": "home.backup",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "needs-you",
        },
      ],
    },
  ],
  "requiredMissing": [
    "perm.fda",
    "tool.arch",
    "tool.herdr",
    "tool.claude",
    "tool.app",
  ],
  "team": {
    "mode": "none",
    "name": "",
    "slug": "",
  },
}
`;

exports[`the setup plan's shape and copy plan: the copy is what the copy table says 1`] = `
{
  "access.title": "Access",
  "account.github.detail": "Signed in through the gh CLI",
  "account.github.optionalNote": "Works without this. Connect a GitHub or GitLab account later to open PRs and MRs from rt.",
  "account.github.title": "GitHub",
  "account.github.why": "Lets rt open PRs, check CI status, and read repo metadata on GitHub.",
  "accounts.title": "Accounts",
  "home.backup.action.label": "Create home repo",
  "home.backup.detail": "No home repo yet, so nothing is backed up",
  "home.backup.optionalNote": "Works without this; local-only just means this machine is the only copy of your settings.",
  "home.backup.title": "Home repo backup",
  "home.backup.why": "Local-only is fully supported; this only confirms whether your settings are actually backed up anywhere, not just committed on this machine.",
  "mac.title": "Your Mac",
  "perm.fda.action.label": "Re-check",
  "perm.fda.detail": "mattstack.app is not running, so permissions cannot be checked",
  "perm.fda.optionalNote": null,
  "perm.fda.title": "Full Disk Access",
  "perm.fda.why": "Reads your repositories' git state so the daemon can show branch and MR status.",
  "perm.login-items.action.label": "Re-check",
  "perm.login-items.detail": "mattstack.app is not running, so permissions cannot be checked",
  "perm.login-items.optionalNote": "Installed by Install (plugins.install).",
  "perm.login-items.title": "Login Items",
  "perm.login-items.why": "Lets mattstack.app start automatically and stay running in the background.",
  "perm.notifications.detail": "Not checked: mattstack.app is not running",
  "perm.notifications.optionalNote": "Works without this; you'll see menu-bar badges instead.",
  "perm.notifications.title": "Notifications",
  "perm.notifications.why": "Shows menu-bar notifications when something needs your attention.",
  "skills.writing-style.detail": "You choose this after Install",
  "skills.writing-style.optionalNote": null,
  "skills.writing-style.title": "Writing style",
  "skills.writing-style.why": "How the reviews, replies and PR descriptions agents post under your name read. Without one they read like an AI assistant.",
  "tool.app.detail": "mattstack.app is not in /Applications or ~/Applications",
  "tool.app.optionalNote": null,
  "tool.app.title": "mattstack.app",
  "tool.app.why": "The tray app hosts the daemon, permissions, and every bundled tool.",
  "tool.arch.detail": "Could not read your processor type",
  "tool.arch.optionalNote": null,
  "tool.arch.title": "Processor",
  "tool.arch.why": "mattstack ships an Apple-silicon (arm64) build; Intel Macs are not supported.",
  "tool.chrome.action.label": "Download",
  "tool.chrome.detail": "Google Chrome is not installed",
  "tool.chrome.optionalNote": "Works without this unless your pack declares chrome.required.",
  "tool.chrome.title": "Google Chrome",
  "tool.chrome.why": "Fast Browser and any Chrome-based pack tools drive Chrome directly.",
  "tool.claude.detail": "Claude Code's sign-in check gave an unexpected answer",
  "tool.claude.optionalNote": null,
  "tool.claude.title": "Claude Code",
  "tool.claude.why": "Runs the agent sessions rt drives and hands work off to.",
  "tool.clt.detail": "Git is installed",
  "tool.clt.optionalNote": null,
  "tool.clt.title": "Command Line Tools",
  "tool.clt.why": "Provides git and the other command-line build tools rt depends on.",
  "tool.daemon.action.label": "Register services",
  "tool.daemon.detail": "Not registered yet",
  "tool.daemon.optionalNote": "Installed by Install (plugins.install).",
  "tool.daemon.title": "Daemon",
  "tool.daemon.why": "The daemon watches your repos and backs MRs and notifications.",
  "tool.editor.detail": "Cursor, Visual Studio Code",
  "tool.editor.optionalNote": "Works without this; rt just won't have an editor to open files in.",
  "tool.editor.title": "Editor",
  "tool.editor.why": "Lets rt open the rt-context extension and hand files off to an editor.",
  "tool.extension.detail": "No editor extension folders found",
  "tool.extension.optionalNote": "Works without this; your editor just won't have rt-aware context.",
  "tool.extension.title": "rt-context extension",
  "tool.extension.why": "Gives your editor rt-aware context.",
  "tool.fast-browser-extension.detail": "Google Chrome is not installed, so there is nothing to load it into",
  "tool.fast-browser-extension.optionalNote": "You load this into Chrome yourself; Install cannot do it for you.",
  "tool.fast-browser-extension.title": "Fast Browser extension",
  "tool.fast-browser-extension.why": "Fast Browser drives your real Chrome session through this extension.",
  "tool.fast-browser.action.label": "Use mattstack's",
  "tool.fast-browser.detail": "Fast Browser is not installed",
  "tool.fast-browser.optionalNote": "Works without this; only the browser skills need it.",
  "tool.fast-browser.title": "Fast Browser",
  "tool.fast-browser.why": "Backs rt's macro-first browser automation.",
  "tool.flavor.detail": "prod CLI, no daemon",
  "tool.flavor.optionalNote": null,
  "tool.flavor.title": "Flavor coherence",
  "tool.flavor.why": "One app serves this machine; a daemon of the other app means stale code answering fresh CLIs.",
  "tool.herdr.action.label": "Upgrade",
  "tool.herdr.detail": "herdr  is older than 0.7.5",
  "tool.herdr.optionalNote": null,
  "tool.herdr.title": "herdr",
  "tool.herdr.why": "Drives Herdr panes for remote-control and multi-agent workflows.",
  "tool.intercepts.detail": "Not needed: your team has no intercepts",
  "tool.intercepts.optionalNote": "Works without this; team command intercepts (git, gh, …) just won't fire.",
  "tool.intercepts.title": "Intercept shims",
  "tool.intercepts.why": "Team command intercepts (git, gh, …) only fire once their PATH shims are installed and current.",
  "tool.legacy-dirs.detail": "State lives only in ~/.mattstack/rt",
  "tool.legacy-dirs.optionalNote": null,
  "tool.legacy-dirs.title": "Legacy state dirs",
  "tool.legacy-dirs.why": "rt reads only ~/.mattstack/rt, so a leftover legacy dir means state is split and silently ignored.",
  "tool.linear-mcp.action.fields[0].hint": "lin_api_…",
  "tool.linear-mcp.action.fields[0].label": "Linear API key",
  "tool.linear-mcp.action.label": "Connect Linear",
  "tool.linear-mcp.detail": "No Linear account connected yet",
  "tool.linear-mcp.optionalNote": "Works without this; only the skills that read Linear tickets need it.",
  "tool.linear-mcp.title": "Linear MCP",
  "tool.linear-mcp.why": "Skills that read and update Linear tickets reach them through this MCP server.",
  "tool.macos.detail": "macOS 15.6",
  "tool.macos.optionalNote": null,
  "tool.macos.title": "macOS version",
  "tool.macos.why": "rt and mattstack.app require macOS 14 or newer.",
  "tool.mission-control.action.label": "Open Keyboard Settings…",
  "tool.mission-control.detail": "Control+Up opens Mission Control, and rt's picker needs it",
  "tool.mission-control.optionalNote": "Works without this; only matters if Control+Up doesn't reach rt's nav picker.",
  "tool.mission-control.title": "Mission Control shortcut",
  "tool.mission-control.why": "rt's nav picker uses Control+Up, which macOS binds to Mission Control by default.",
  "tool.path.action.label": "Set up PATH",
  "tool.path.detail": "Install adds ~/.local/bin to your PATH in ~/.zshenv",
  "tool.path.optionalNote": null,
  "tool.path.title": "PATH precedence",
  "tool.path.why": "Makes sure your shell finds rt's shims and team intercepts before any conflicting binary.",
  "tool.plugins.detail": "Claude Code's plugin list could not be read",
  "tool.plugins.optionalNote": "Installed by Install (plugins.install).",
  "tool.plugins.title": "Claude plugins",
  "tool.plugins.why": "rt's skills, Fast Browser's and rt chat's all reach Claude Code as marketplace plugins.",
  "tool.proxy.action.label": "Install proxy",
  "tool.proxy.detail": "Not installed",
  "tool.proxy.optionalNote": "Works without this; apps serve on their ports meanwhile.",
  "tool.proxy.title": "Local proxy",
  "tool.proxy.why": "Serves apps on .localhost/.mattstack domains instead of raw ports.",
  "tool.rt-link.detail": "mattstack.app not found, so there is nothing to link into",
  "tool.rt-link.optionalNote": "Cosmetic: without this, \`rt\` may resolve to a different copy on PATH than the one inside mattstack.app.",
  "tool.rt-link.title": "rt PATH link",
  "tool.rt-link.why": "Prod mode's ~/.local/bin/rt must point at the rt inside mattstack.app.",
  "tool.rt.detail": "",
  "tool.rt.optionalNote": null,
  "tool.rt.title": "rt binary",
  "tool.rt.why": "rt itself must be on PATH before anything else can run.",
  "tool.shell.detail": "rt does not know this shell, so add the rtcd alias yourself",
  "tool.shell.optionalNote": "Works without this; you can still run \`rt cd\` directly, just not the \`rtcd\` shell alias.",
  "tool.shell.title": "Shell integration",
  "tool.shell.why": "The rtcd alias and PATH precedence come from your shell rc file.",
  "tool.state-backup.action.label": "Show steps…",
  "tool.state-backup.action.steps": [
    "Update mattstack.app; it ships age, zstd and git-lfs",
    "Or install them yourself: brew install age zstd git-lfs",
    "Then re-run rt setup status",
  ],
  "tool.state-backup.detail": "Not installed: age, zstd, git-lfs",
  "tool.state-backup.optionalNote": "Works without this; \`rt state backup\` is what needs them.",
  "tool.state-backup.title": "State backup tools",
  "tool.state-backup.why": "Encrypted state backup compresses with zstd, encrypts with age, and ships the result through git-lfs.",
  "tool.vsix.detail": "mattstack.app not found",
  "tool.vsix.optionalNote": "Works without this; the rt-context editor extension just won't be pre-installed for you.",
  "tool.vsix.title": "Bundled extension",
  "tool.vsix.why": "mattstack.app can carry the rt-context editor extension pre-bundled.",
  "tools.title": "Tools",
}
`;

exports[`the setup plan's shape and copy status: the machine view is unchanged 1`] = `
{
  "canInstall": false,
  "contract": 1,
  "finishBlockedBy": [
    "skills.writing-style",
  ],
  "groups": [
    {
      "id": "mac",
      "rows": [
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "status",
            ],
          },
          "id": "perm.fda",
          "kind": "permission",
          "recheck": "on-activate",
          "required": true,
          "status": "error",
        },
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "status",
            ],
          },
          "id": "perm.login-items",
          "kind": "permission",
          "recheck": "on-activate",
          "required": true,
          "status": "error",
        },
        {
          "action": null,
          "id": "perm.notifications",
          "kind": "permission",
          "recheck": "on-activate",
          "required": false,
          "status": "skipped",
        },
        {
          "action": null,
          "id": "tool.macos",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "ready",
        },
        {
          "action": null,
          "id": "tool.clt",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "ready",
        },
        {
          "action": null,
          "id": "tool.arch",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "error",
        },
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "apply",
              "--only",
              "path.link",
            ],
          },
          "id": "tool.path",
          "kind": "info",
          "recheck": "on-change",
          "required": false,
          "status": "missing",
        },
      ],
    },
    {
      "id": "accounts",
      "rows": [
        {
          "action": null,
          "id": "account.github",
          "kind": "account",
          "recheck": "on-change",
          "required": false,
          "status": "ready",
        },
      ],
    },
    {
      "id": "access",
      "rows": [],
    },
    {
      "id": "tools",
      "rows": [
        {
          "action": {
            "tool": "herdr",
            "type": "install",
            "via": "brew",
          },
          "id": "tool.herdr",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "invalid",
        },
        {
          "action": null,
          "id": "tool.claude",
          "kind": "tool",
          "recheck": "on-activate",
          "required": true,
          "status": "error",
        },
        {
          "action": {
            "tool": "fast-browser",
            "type": "link-bundled",
          },
          "id": "tool.fast-browser",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "missing",
        },
        {
          "action": null,
          "finishGated": false,
          "id": "tool.fast-browser-extension",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "skipped",
        },
        {
          "action": null,
          "id": "tool.editor",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "ready",
        },
        {
          "action": {
            "type": "open-url",
            "url": "https://www.google.com/chrome/",
          },
          "id": "tool.chrome",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "missing",
        },
        {
          "action": {
            "target": "keyboard",
            "type": "open-settings",
          },
          "id": "tool.mission-control",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "needs-you",
        },
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "apply",
              "--only",
              "proxy.install",
            ],
          },
          "id": "tool.proxy",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "missing",
        },
        {
          "action": {
            "type": "steps",
          },
          "id": "tool.state-backup",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "needs-you",
        },
        {
          "action": null,
          "id": "tool.plugins",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "error",
        },
        {
          "action": null,
          "finishGated": true,
          "id": "skills.writing-style",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "needs-you",
          "waivable": false,
        },
        {
          "action": {
            "fields": [
              {
                "name": "apiKey",
                "secret": true,
              },
            ],
            "integration": "linear",
            "type": "connect",
          },
          "id": "tool.linear-mcp",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "needs-you",
        },
        {
          "action": null,
          "id": "tool.rt",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "ready",
        },
        {
          "action": null,
          "id": "tool.rt-link",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "skipped",
        },
        {
          "action": null,
          "id": "tool.legacy-dirs",
          "kind": "tool",
          "recheck": "on-change",
          "required": true,
          "status": "ready",
        },
        {
          "action": null,
          "id": "tool.intercepts",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "ready",
        },
        {
          "action": null,
          "id": "tool.app",
          "kind": "tool",
          "recheck": "on-activate",
          "required": true,
          "status": "missing",
        },
        {
          "action": null,
          "id": "tool.vsix",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "skipped",
        },
        {
          "action": null,
          "id": "tool.extension",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "skipped",
        },
        {
          "action": null,
          "id": "tool.shell",
          "kind": "tool",
          "recheck": "on-change",
          "required": false,
          "status": "needs-you",
        },
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "apply",
              "--only",
              "services.register",
            ],
          },
          "id": "tool.daemon",
          "kind": "tool",
          "recheck": "on-activate",
          "required": true,
          "status": "missing",
        },
        {
          "action": null,
          "id": "tool.flavor",
          "kind": "tool",
          "recheck": "on-activate",
          "required": true,
          "status": "ready",
        },
        {
          "action": {
            "type": "run",
            "verb": [
              "setup",
              "apply",
              "--only",
              "home.init",
            ],
          },
          "id": "home.backup",
          "kind": "tool",
          "recheck": "on-activate",
          "required": false,
          "status": "needs-you",
        },
      ],
    },
  ],
  "requiredMissing": [
    "perm.fda",
    "perm.login-items",
    "tool.arch",
    "tool.herdr",
    "tool.claude",
    "tool.plugins",
    "tool.app",
    "tool.daemon",
  ],
  "team": {
    "mode": "none",
    "name": "",
    "slug": "",
  },
}
`;

exports[`the setup plan's shape and copy status: the copy is what the copy table says 1`] = `
{
  "access.title": "Access",
  "account.github.detail": "Signed in through the gh CLI",
  "account.github.optionalNote": "Works without this. Connect a GitHub or GitLab account later to open PRs and MRs from rt.",
  "account.github.title": "GitHub",
  "account.github.why": "Lets rt open PRs, check CI status, and read repo metadata on GitHub.",
  "accounts.title": "Accounts",
  "home.backup.action.label": "Create home repo",
  "home.backup.detail": "No home repo yet, so nothing is backed up",
  "home.backup.optionalNote": "Works without this; local-only just means this machine is the only copy of your settings.",
  "home.backup.title": "Home repo backup",
  "home.backup.why": "Local-only is fully supported; this only confirms whether your settings are actually backed up anywhere, not just committed on this machine.",
  "mac.title": "Your Mac",
  "perm.fda.action.label": "Re-check",
  "perm.fda.detail": "mattstack.app is not running, so permissions cannot be checked",
  "perm.fda.optionalNote": null,
  "perm.fda.title": "Full Disk Access",
  "perm.fda.why": "Reads your repositories' git state so the daemon can show branch and MR status.",
  "perm.login-items.action.label": "Re-check",
  "perm.login-items.detail": "mattstack.app is not running, so permissions cannot be checked",
  "perm.login-items.optionalNote": null,
  "perm.login-items.title": "Login Items",
  "perm.login-items.why": "Lets mattstack.app start automatically and stay running in the background.",
  "perm.notifications.detail": "Not checked: mattstack.app is not running",
  "perm.notifications.optionalNote": "Works without this; you'll see menu-bar badges instead.",
  "perm.notifications.title": "Notifications",
  "perm.notifications.why": "Shows menu-bar notifications when something needs your attention.",
  "skills.writing-style.detail": "You choose this after Install",
  "skills.writing-style.optionalNote": null,
  "skills.writing-style.title": "Writing style",
  "skills.writing-style.why": "How the reviews, replies and PR descriptions agents post under your name read. Without one they read like an AI assistant.",
  "tool.app.detail": "mattstack.app is not in /Applications or ~/Applications",
  "tool.app.optionalNote": null,
  "tool.app.title": "mattstack.app",
  "tool.app.why": "The tray app hosts the daemon, permissions, and every bundled tool.",
  "tool.arch.detail": "Could not read your processor type",
  "tool.arch.optionalNote": null,
  "tool.arch.title": "Processor",
  "tool.arch.why": "mattstack ships an Apple-silicon (arm64) build; Intel Macs are not supported.",
  "tool.chrome.action.label": "Download",
  "tool.chrome.detail": "Google Chrome is not installed",
  "tool.chrome.optionalNote": "Works without this unless your pack declares chrome.required.",
  "tool.chrome.title": "Google Chrome",
  "tool.chrome.why": "Fast Browser and any Chrome-based pack tools drive Chrome directly.",
  "tool.claude.detail": "Claude Code's sign-in check gave an unexpected answer",
  "tool.claude.optionalNote": null,
  "tool.claude.title": "Claude Code",
  "tool.claude.why": "Runs the agent sessions rt drives and hands work off to.",
  "tool.clt.detail": "Git is installed",
  "tool.clt.optionalNote": null,
  "tool.clt.title": "Command Line Tools",
  "tool.clt.why": "Provides git and the other command-line build tools rt depends on.",
  "tool.daemon.action.label": "Register services",
  "tool.daemon.detail": "Not registered yet",
  "tool.daemon.optionalNote": null,
  "tool.daemon.title": "Daemon",
  "tool.daemon.why": "The daemon watches your repos and backs MRs and notifications.",
  "tool.editor.detail": "Cursor, Visual Studio Code",
  "tool.editor.optionalNote": "Works without this; rt just won't have an editor to open files in.",
  "tool.editor.title": "Editor",
  "tool.editor.why": "Lets rt open the rt-context extension and hand files off to an editor.",
  "tool.extension.detail": "No editor extension folders found",
  "tool.extension.optionalNote": "Works without this; your editor just won't have rt-aware context.",
  "tool.extension.title": "rt-context extension",
  "tool.extension.why": "Gives your editor rt-aware context.",
  "tool.fast-browser-extension.detail": "Google Chrome is not installed, so there is nothing to load it into",
  "tool.fast-browser-extension.optionalNote": "You load this into Chrome yourself; Install cannot do it for you.",
  "tool.fast-browser-extension.title": "Fast Browser extension",
  "tool.fast-browser-extension.why": "Fast Browser drives your real Chrome session through this extension.",
  "tool.fast-browser.action.label": "Use mattstack's",
  "tool.fast-browser.detail": "Fast Browser is not installed",
  "tool.fast-browser.optionalNote": "Works without this; only the browser skills need it.",
  "tool.fast-browser.title": "Fast Browser",
  "tool.fast-browser.why": "Backs rt's macro-first browser automation.",
  "tool.flavor.detail": "prod CLI, no daemon",
  "tool.flavor.optionalNote": null,
  "tool.flavor.title": "Flavor coherence",
  "tool.flavor.why": "One app serves this machine; a daemon of the other app means stale code answering fresh CLIs.",
  "tool.herdr.action.label": "Upgrade",
  "tool.herdr.detail": "herdr  is older than 0.7.5",
  "tool.herdr.optionalNote": null,
  "tool.herdr.title": "herdr",
  "tool.herdr.why": "Drives Herdr panes for remote-control and multi-agent workflows.",
  "tool.intercepts.detail": "Not needed: your team has no intercepts",
  "tool.intercepts.optionalNote": "Works without this; team command intercepts (git, gh, …) just won't fire.",
  "tool.intercepts.title": "Intercept shims",
  "tool.intercepts.why": "Team command intercepts (git, gh, …) only fire once their PATH shims are installed and current.",
  "tool.legacy-dirs.detail": "State lives only in ~/.mattstack/rt",
  "tool.legacy-dirs.optionalNote": null,
  "tool.legacy-dirs.title": "Legacy state dirs",
  "tool.legacy-dirs.why": "rt reads only ~/.mattstack/rt, so a leftover legacy dir means state is split and silently ignored.",
  "tool.linear-mcp.action.fields[0].hint": "lin_api_…",
  "tool.linear-mcp.action.fields[0].label": "Linear API key",
  "tool.linear-mcp.action.label": "Connect Linear",
  "tool.linear-mcp.detail": "No Linear account connected yet",
  "tool.linear-mcp.optionalNote": "Works without this; only the skills that read Linear tickets need it.",
  "tool.linear-mcp.title": "Linear MCP",
  "tool.linear-mcp.why": "Skills that read and update Linear tickets reach them through this MCP server.",
  "tool.macos.detail": "macOS 15.6",
  "tool.macos.optionalNote": null,
  "tool.macos.title": "macOS version",
  "tool.macos.why": "rt and mattstack.app require macOS 14 or newer.",
  "tool.mission-control.action.label": "Open Keyboard Settings…",
  "tool.mission-control.detail": "Control+Up opens Mission Control, and rt's picker needs it",
  "tool.mission-control.optionalNote": "Works without this; only matters if Control+Up doesn't reach rt's nav picker.",
  "tool.mission-control.title": "Mission Control shortcut",
  "tool.mission-control.why": "rt's nav picker uses Control+Up, which macOS binds to Mission Control by default.",
  "tool.path.action.label": "Set up PATH",
  "tool.path.detail": "Install adds ~/.local/bin to your PATH in ~/.zshenv",
  "tool.path.optionalNote": null,
  "tool.path.title": "PATH precedence",
  "tool.path.why": "Makes sure your shell finds rt's shims and team intercepts before any conflicting binary.",
  "tool.plugins.detail": "Claude Code's plugin list could not be read",
  "tool.plugins.optionalNote": null,
  "tool.plugins.title": "Claude plugins",
  "tool.plugins.why": "rt's skills, Fast Browser's and rt chat's all reach Claude Code as marketplace plugins.",
  "tool.proxy.action.label": "Install proxy",
  "tool.proxy.detail": "Not installed",
  "tool.proxy.optionalNote": "Works without this; apps serve on their ports meanwhile.",
  "tool.proxy.title": "Local proxy",
  "tool.proxy.why": "Serves apps on .localhost/.mattstack domains instead of raw ports.",
  "tool.rt-link.detail": "mattstack.app not found, so there is nothing to link into",
  "tool.rt-link.optionalNote": "Cosmetic: without this, \`rt\` may resolve to a different copy on PATH than the one inside mattstack.app.",
  "tool.rt-link.title": "rt PATH link",
  "tool.rt-link.why": "Prod mode's ~/.local/bin/rt must point at the rt inside mattstack.app.",
  "tool.rt.detail": "",
  "tool.rt.optionalNote": null,
  "tool.rt.title": "rt binary",
  "tool.rt.why": "rt itself must be on PATH before anything else can run.",
  "tool.shell.detail": "rt does not know this shell, so add the rtcd alias yourself",
  "tool.shell.optionalNote": "Works without this; you can still run \`rt cd\` directly, just not the \`rtcd\` shell alias.",
  "tool.shell.title": "Shell integration",
  "tool.shell.why": "The rtcd alias and PATH precedence come from your shell rc file.",
  "tool.state-backup.action.label": "Show steps…",
  "tool.state-backup.action.steps": [
    "Update mattstack.app; it ships age, zstd and git-lfs",
    "Or install them yourself: brew install age zstd git-lfs",
    "Then re-run rt setup status",
  ],
  "tool.state-backup.detail": "Not installed: age, zstd, git-lfs",
  "tool.state-backup.optionalNote": "Works without this; \`rt state backup\` is what needs them.",
  "tool.state-backup.title": "State backup tools",
  "tool.state-backup.why": "Encrypted state backup compresses with zstd, encrypts with age, and ships the result through git-lfs.",
  "tool.vsix.detail": "mattstack.app not found",
  "tool.vsix.optionalNote": "Works without this; the rt-context editor extension just won't be pre-installed for you.",
  "tool.vsix.title": "Bundled extension",
  "tool.vsix.why": "mattstack.app can carry the rt-context editor extension pre-bundled.",
  "tools.title": "Tools",
}
`;
